--- a/src/main/resources/email_template.html
+++ b/src/main/resources/email_template.html
@@ -19,7 +19,7 @@
             padding: 30px 20px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            max-width: 450px;
+            max-width: 600px;
             width: 100%;
             text-align: center;
         }
@@ -27,7 +27,7 @@
             margin-bottom: 20px;
         }
         p {
-            margin-bottom: 15px;
+            margin-bottom: 25px;
             font-size: 16px;
             line-height: 1.5;
         }
@@ -57,6 +57,7 @@
     <p>
         <a href="[PLACEHOLDER_LOGIN_LINK_GOES_HERE]" class="login-button">Login</a>
     </p>
+    <p>This is an open-source project. You can find the source <a href="https://github.com/Joozd/chronos_to_pdf">here</a>.</p>
 </div>
 
 </body>
