Visited link was poorly readable. Attempt to fix it, might not work on all email clients

--- a/src/main/resources/email_template.html
+++ b/src/main/resources/email_template.html
@@ -54,9 +54,18 @@
     <h2>Welcome to Joozd's Chronos to PDF service!</h2>
     <p>To log in to your account, please click the button below.</p>
     <p>This is the only way to log into your account. If you lose this link, you will have to recreate your account and upload all your monthly overviews again. There is no "lost login" option.</p>
-    <p>
-        <a href="[PLACEHOLDER_LOGIN_LINK_GOES_HERE]" class="login-button">Login</a>
+    <p style="text-align: center;">
+    <div style="display: inline-block;">
+        <table role="presentation" cellspacing="0" cellpadding="0">
+            <tr>
+                <td style="border-radius: 4px; background: #007bff;">
+                    <a href="[PLACEHOLDER_LOGIN_LINK_GOES_HERE]" class="login-button" style="color: #ffffff !important; display: inline-block; padding: 10px 20px; border-radius: 4px; font-size: 16px;">Login</a>
+                </td>
+            </tr>
+        </table>
+    </div>
     </p>
+
     <p>This is an open-source project. You can find the source <a href="https://github.com/Joozd/chronos_to_pdf">here</a>.</p>
 </div>
 
