--- a/src/main/resources/public/confirmation.html
+++ b/src/main/resources/public/confirmation.html
@@ -10,7 +10,8 @@
 <div class="confirmation-container">
     <h2>Almost there!</h2>
     <p>We've sent a login link to your email. Please click the link in the email to complete your login.</p>
-    <p>If you don't see the email, please check your spam or junk folder.</p>
+    <p>Sometimes these mails take a while to get through.</p>
+    <p>If you don't see the email in an hour or so, please check your spam or junk folder. Also, trying again is sometimes faster if you are in a hurry.</p>
 </div>
 </body>
 </html>
