--- a/src/main/resources/public/upload.html
+++ b/src/main/resources/public/upload.html
@@ -65,7 +65,7 @@
             <!-- Dropdown -->
             <label class="dropdown-label">
                 Default function:
-                <select name="dropdown">
+                <select name="function">
                     <option value="Captain">Captain</option>
                     <option value="FO">FO</option>
                     <option value="SO">SO</option>
