Operations times fixed

--- a/src/main/resources/public/upload.html
+++ b/src/main/resources/public/upload.html
@@ -24,7 +24,7 @@
     <p>Some assumptions will be made to deal with missing data:</p>
     <ul>
         <li><b>You have looked at, and understand all preferences</b></li>
-        <li>All flights are with 2 crew</li>
+        <li>3 or 4 pilot ops are based on block time</li>
         <li>All flights are IFR</li>
         <li>Not all simulator duties might appear. If that is the case, please mail a roster with it to joozd@joozd.nl</li>
     </ul>
