Upload page text

--- a/src/main/resources/public/upload.html
+++ b/src/main/resources/public/upload.html
@@ -34,8 +34,7 @@
     <!-- Add Modal Trigger Button Here -->
     <button type="button" id="openModalBtn">Preferences</button>
 
-    <p>If you run into any issues or have feedback, please contact me at joozd@joozd.nl</p>
-    <p><b>This is still work in progress. Please provide your own cover page.</b></p>
+    <p><b>This site is still work in progress. Everything should work, please mail any problems to joozd@joozd.nl</b></p>
 
     <input type="file" name="files" id="files" multiple>
 
